# two_bits

./: LICENSE  README.md  pyproject.toml
src/two_bits/: two_bits.py  word_bank.txt
